--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,3 +6,12 @@ bob:
     persistence_token: <%= Authlogic::Random.hex_token %>
     firstname: Bob
     lastname: Foobar
+
+bill:
+    email: bill@foobar.com
+    login: bill
+    password_salt: <%= salt = Authlogic::Random.hex_token %>
+    crypted_password: <%= Authlogic::CryptoProviders::Sha512.encrypt("foobar" + salt) %>
+    persistence_token: <%= Authlogic::Random.hex_token %>
+    firstname: Bill
+    lastname: Foobar 
