Updated activities views and controller. Added a subset of the functionality for designating an activity as default for all users. Updated migrations (removed assignments table and added some default values to time_entries). Some additional adjustments here and there.

--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -12,3 +12,4 @@ CSI:
     name: Conduct Services Institute
     description: Kartlegging av nødvendig kompetanse for å bemanne et prosjekt
     category: internal_project
+    default_activity: true
