Added context for Next week link in week_entries_controller_test.rb. Added field month (integer) to time_entires table. Updated testdata with month. Added some named scopes to TimeEntry model

--- a/test/fixtures/time_entries.yml
+++ b/test/fixtures/time_entries.yml
@@ -8,6 +8,7 @@ project = "timeflux_#{week_number}"
     hours: 7.5
     billed: false
     locked: false
+    month: 6
     counterpost: false
     date: <%= date.+(i+1) %>
     week_entry: <%= project %>
@@ -19,6 +20,7 @@ project = "timeflux_#{week_number}"
     hours: 7.5
     billed: false
     locked: false
+    month: 6
     counterpost: false
     date: <%= date.+(i+1) %>
     week_entry: <%= project %>
