Implemented functionality for creating and editing time_entries in TimeEntriesController. Most of index.html.erb and edit.html.erb is finished (- previous/next week & remove functionality).

--- a/test/fixtures/time_entries.yml
+++ b/test/fixtures/time_entries.yml
@@ -1,27 +1,11 @@
-<% date = Date.today %>
-bob_one:
+<% date = Date.today.beginning_of_week %>
+<% 7.times do |i| %>
+bob_<%= i %>:
     hours: 7.5
     billed: false
     locked: false
     counterpost: false
-    date: <%= date %>
+    date: <%= date.+(i) %>
     user: bob
     activity: timeflux
-    
-bob_two:
-    hours: 7.5
-    billed: false
-    locked: false
-    counterpost: false
-    date: <%= date %>
-    user: bob
-    activity: timeflux 
-    
-bob_three:
-    hours: 7.5
-    billed: false
-    locked: false
-    counterpost: false
-    date: <%= date %>
-    user: bob
-    activity: timeflux 
+<% end %>
