--- a/test/fixtures/time_entries.yml
+++ b/test/fixtures/time_entries.yml
@@ -1,6 +1,6 @@
 <% 
 weekdays = ['monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday', 'sunday'] 
-activity = "timeflux"
+activity = "timeflux_development"
 user = "bob"
 %>
 
