Added editable vacation table for all users

--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -8,3 +8,8 @@ timeflux_administration:
     description: Administration of TimeFlux in production
     default_activity: true
     tags: conduct, timeflux
+
+holiday:
+    name: Vacation
+    description: Normal vacation
+    default_activity: true
