fixed tests broken due to activity missing a project

--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -2,6 +2,7 @@ vacation:
     name: Vacation
     shared: true
     description: Normal vacation
+    project: internal
     default_activity: true
 
 timeflux_development:
