--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -1,5 +1,9 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
+internal:
+  name: Internal
+  customer: conduct
+
 community:
   name: Community Project
   customer: conduct
