--- a/test/fixtures/time_entries.yml
+++ b/test/fixtures/time_entries.yml
@@ -51,5 +51,5 @@ week = date.cweek
     user: <%= user %>
     activity: <%= activity %>
     hour_type: normaltid
-    locked: true
+    status: 1
 <% end %>
