Added validation to prevent destroying Projects with activities. Updated test fixtures.

--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -3,11 +3,11 @@
 conduct:
   name: Conduct
 
-telenor:
-  name: Telenor
+global_corp:
+  name: Global Corporation
 
-nsb:
-  name: NSB
+enterprise_ltd:
+  name: Enterprise Limited
 
-cupido:
-  name: Cupido
+sokadu:
+  name: Sokadu
